# rust-backend-playground

./: README.md  docker-compose.yml
todo_api/: .env  Cargo.toml  Dockerfile
todo_api/migrations/2024-02-17-124354_create_todos/: up.sql
todo_api/migrations/2024-02-17-235558_add_timestamps_to_todos/: down.sql  up.sql
todo_api/src/: db.rs  main.rs  models.rs  schema.rs  todo.rs
